--- a/configs/logger/wandb.yaml
+++ b/configs/logger/wandb.yaml
@@ -2,12 +2,12 @@
 
 wandb:
   _target_: pytorch_lightning.loggers.wandb.WandbLogger
-  project: "template-tests"
-  # name: ${name}
+  project: "object-detection"
+  name: ${name}
   save_dir: "."
   offline: False # set True to store all logs only locally
   id: null # pass correct id to resume experiment!
-  # entity: ""  # set to name of your wandb team
+  entity: "next_level"  # set to name of your wandb team
   log_model: False
   prefix: ""
   job_type: "train"
