--- a/requirements.txt
+++ b/requirements.txt
@@ -29,4 +29,6 @@ rich            # beautiful text formatting in terminal
 pytest          # tests
 sh              # for running bash commands in some tests
 pudb            # debugger
+
 pandas
+numpy
