add recycle model

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ torchmetrics>=0.7.0
 # --------- hydra --------- #
 hydra-core>=1.1.0
 hydra-colorlog>=1.1.0
-hydra-optuna-sweeper>=1.1.0
+hydra-optuna-sweeper
 
 # --------- loggers --------- #
 wandb
@@ -32,3 +32,11 @@ pudb            # debugger
 
 pandas
 numpy
+
+albumentations
+pycocotools
+opencv-python
+tqdm
+torchnet
+map-boxes
+jupyter
