--- a/configs/test.yaml
+++ b/configs/test.yaml
@@ -3,8 +3,8 @@
 # specify here default evaluation configuration
 defaults:
   - _self_
-  - datamodule: mnist.yaml # choose the datamodule for evaluation
-  - model: mnist.yaml
+  - datamodule: recycle.yaml # choose the datamodule for evaluation
+  - model: recycle.yaml
   - callbacks: null
   - logger: null
   - trainer: default.yaml
@@ -18,7 +18,7 @@ defaults:
 
 original_work_dir: ${hydra:runtime.cwd}
 
-data_dir: ${original_work_dir}/data/
+data_dir: /opt/ml/detection/dataset
 
 print_config: True
 
@@ -29,4 +29,4 @@ seed: null
 name: "default"
 
 # passing checkpoint path is necessary
-ckpt_path: ???
+ckpt_path: /opt/ml/baseline/level2-object-detection-level2-cv-19/logs/experiments/runs/recycle_test/2022-03-22_17-20-35/checkpoints/last.ckpt
