--- a/baseline/configs/train.yaml
+++ b/baseline/configs/train.yaml
@@ -55,4 +55,4 @@ seed: null
 
 # default name for the experiment, determines logging folder path
 # (you can overwrite this name in experiment configs)
-name: "recycle_test"
+name: "recycle_epoch_40"
