--- a/baseline/configs/datamodule/recycle.yaml
+++ b/baseline/configs/datamodule/recycle.yaml
@@ -2,6 +2,6 @@ _target_: src.datamodules.recycle_datamodule.RecycleDataModule
 
 data_dir: ${data_dir} # data_dir is specified in config.yaml
 batch_size: 32
-train_val_test_split: [3418, 489, 976]
+train_val_test_split: [3906, 977]
 num_workers: 0
 pin_memory: False
